OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Approval_Policy__mdt/Vendor_Program_Approval_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Vendor Program Approval Policy</label>
    <pluralLabel>Vendor Program Approval Policies</pluralLabel>
</CustomObject>