OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Approval_Policy__mdt/fields/Approval_Process_DevName__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_DevName__c</fullName>
    <label>Approval Process DevName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>