OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Approval_Policy__mdt/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>