OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Approval_Policy__mdt/fields/Block_Action__c.field-meta.xml
<CustomField>
    <fullName>Block_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Action</label>
    <type>Checkbox</type>
</CustomField>