OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Approval_Policy__mdt/fields/Policy_Key__c.field-meta.xml
<CustomField>
    <fullName>Policy_Key__c</fullName>
    <label>Policy Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>