OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Approval_Policy__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement</fullName>
                <default>true</default>
                <label>Agreement</label>
            </value>
            <value>
                <fullName>Auto Insurance</fullName>
            </value>
            <value>
                <fullName>Background Check</fullName>
            </value>
            <value>
                <fullName>Business License</fullName>
            </value>
            <value>
                <fullName>Chuzo Agreement</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Credit Check</fullName>
            </value>
            <value>
                <fullName>Driver&apos;s License</fullName>
            </value>
            <value>
                <fullName>Employment Form</fullName>
            </value>
            <value>
                <fullName>ERP Setup</fullName>
            </value>
            <value>
                <fullName>General Liability Insurance</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Net Terms</fullName>
            </value>
            <value>
                <fullName>Personal Guarantee</fullName>
            </value>
            <value>
                <fullName>SubAgent License Agreement</fullName>
            </value>
            <value>
                <fullName>Terms &amp; Conditions</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Worker&apos;s Compensation Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>